update responsive design

--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@ url('./images/banner.png');">
         </div>
         <img src="./images/cupon-devider.png" alt="">
         <div class="right w-[45%] flex flex-col justify-center items-center">
-          <h1 class="text-4xl font-bold">NEW15</h1>
-          <p class="text-gray-600">cupppon code</p>
+          <h1 class="text-3xl lg:text-4xl font-bold">NEW15</h1>
+          <p class="text-gray-600">coupon code</p>
         </div>
       </div>
       <div class="couple20 bg-[#F78C9C] w-full lg:w-[450px] flex justify-center items-center rounded-xl h-52">
         <div class="left w-[55%] flex flex-col justify-center items-center">
-          <h1 class="text-3xl font-bold">20% OFF</h1>
+          <p class="text-3xl font-bold">20% OFF</p>
           <p class="font-medium">on your next purchase</p>
           <p class="font-normal text-gray-600">used by fabruary 2024</p>
         </div>
         <img src="./images/cupon-devider.png" alt="">
         <div class="right w-[45%] flex flex-col justify-center items-center">
-          <h1 class="text-4xl font-bold">couple20</h1>
-          <p class="text-gray-600">cupppon code</p>
+          <h1 class="text-3xl lg:text-4xl font-bold">couple20</h1>
+          <p class="text-gray-600">coupon code</p>
         </div>
       </div>
     </div>
@@ -104,10 +104,10 @@ url('./images/banner.png');">
 
   <div class="dash-left w-full lg:w-[80%]">
     <div class="card-heading flex justify-between items-center">
-      <div class="bus-logo-text flex m-4 justify-start gap-3">
+      <div class="bus-logo-text flex m-4 justify-start items-center gap-3">
         <img class="w-[40px] h-[25px] lg:w-16 lg:h-12  object-cover" src="./images/bus-logo.png" alt="">
         <div class="busText flex flex-col justify-center items-center ">
-          <p class="font-bold  lg:text-2xl ">Greenline Paribahan</p>
+          <p class="font-bold text-xl  lg:text-2xl ">Greenline Paribahan</p>
           <p class="font-normal hidden lg:block text-gray-500">Coach-009-web ! Ac_Economy</p>
         </div>
       </div>
@@ -159,7 +159,7 @@ url('./images/banner.png');">
     <hr class="border border-green-400 border-dashed w-[98%] mx-auto my-2">
     <div class="flex justify-end">
       <button class="btn w-[20%]">
-        <img class="w-10 h-10 object-cover" src="./images/stearing.png" alt="">
+        <img class="w-5 h-5 lg:w-10 lg:h-10 object-cover" src="./images/stearing.png" alt="">
       </button>
     </div>
 
@@ -228,7 +228,7 @@ url('./images/banner.png');">
     <h3 class="font-bold text-lg text-green-400">SUCCESS</h3>
     <p class=" font-bold">Thank you for Booking Our Bus Seats. </p>
      <p class="font-bold text-center"> We are working hard to find the best service and deals for you. </p>
-      Shortly you will find a confirmation in your email.</p>
+      <p class="text-center">Shortly you will find a confirmation in your email.</p>
     <div class="modal-action">
       <form method="dialog">
         <!-- if there is a button in form, it will close the modal -->
