--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="./css/style.css">
 
     <title>PH PARIBAHAN</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -166,24 +167,26 @@ url('./images/banner.png');">
     <div class="flex justify-between items-center my-4">
       <span>A</span>
       <div class="flex justify-between w-[40%]">
-        <button id="A1" class="btn text-gray-500 w-[48%]">A1</button>
-        <button id="A2" class="btn text-gray-500 w-[48%] ">A2</button>
+        <!-- <button id="A1" onclick="selectSeat()"  class="btn text-gray-500 w-[48%]">A1</button> -->
+        <button id="A1" onclick="selectSeat('A1')" class="add-seat btn text-gray-500 w-[48%]">A1</button>
+
+        <button id="A2" onclick="selectSeat('A2')" class="add-seat btn text-gray-500 w-[48%] ">A2</button>
       </div>
       <div class="flex justify-between w-[40%]">
-        <button id="A3" class="btn text-gray-500 w-[48%] ">A3</button>
-        <button id="A4" class="btn text-gray-500 w-[48%]">A4</button>
+        <button id="A3"  onclick="selectSeat('A3')" class="add-seat btn text-gray-500 w-[48%] ">A3</button>
+        <button id="A4"  onclick="selectSeat('A4')" class="add-seat btn text-gray-500 w-[48%]">A4</button>
       </div>
     </div>
 
     <div class="flex justify-between items-center my-4">
       <span>B</span>
       <div class="flex justify-between w-[40%]">
-        <button id="B1" class="btn text-gray-500 w-[48%]">B1</button>
-        <button id="B2" class="btn text-gray-500 w-[48%] ">B2</button>
+        <button id="B1" onclick="selectSeat('B1')" class="add-seat btn text-gray-500 w-[48%]">B1</button>
+        <button id="B2" onclick="selectSeat('B2')" class="add-seat btn text-gray-500 w-[48%] ">B2</button>
       </div>
       <div class="flex justify-between w-[40%]">
-        <button id="B3" class="btn text-gray-500 w-[48%] ">B3</button>
-        <button id="B4" class="btn text-gray-500 w-[48%]">B4</button>
+        <button id="B3" onclick="selectSeat('B3')" class="add-seat btn text-gray-500 w-[48%] ">B3</button>
+        <button id="B4" onclick="selectSeat('B4')" class="add-seat btn text-gray-500 w-[48%]">B4</button>
       </div>
     </div>
     
@@ -196,21 +199,19 @@ url('./images/banner.png');">
       <div class="flex justify-between">
         <div class="seatQuantity flex justify-start items-center gap-2">
           <p class="font-bold">Seats </p>
-          <div id="seat-quantity" class=" w-[25px] h-[20px] text-center bg-green-400 text-white w- rounded-md">1</div>
+          <div id="seat-quantity" class=" w-[25px] h-[20px] text-center bg-green-400 text-white w- rounded-md"> <span id="selected-seat">0</span></div>
         </div>
         <p class="font-bold">Class</p>
         <p class="font-bold">Price</p>
       </div>
       <hr class="border border-gray-400 border-dashed w-[98%] mx-auto my-2">
-      <div class="flex justify-between">
-        <p>A1</p>
-        <p>Economy</p>
-        <p>550</p>
+      <div id="selected-ticket-details"  class="">
+        <li class="flex justify-between"></li>
       </div>
       <hr class="border border-gray-400 border-dashed w-[98%] mx-auto my-2">
       <div class="flex justify-between my-2">
         <p class="font-bold">Total Price</p>
-        <p class="font-bold">BDT <span id="total-price">1100</span></p>
+        <p class="font-bold">BDT <span id="total-price"> 0</span></p>
       </div>
     <div class="flex w-full lg:w-96 rounded-lg bg-white">
       <input class="w-full p-2 my-2 h-12  rounded-lg" type="text" placeholder="Have any coupon?">
@@ -221,7 +222,7 @@ url('./images/banner.png');">
       <p class="font-bold">BDT <span id="grand-total">1100</span></p>
     </div>
     <!-- Open the modal using ID.showModal() method -->
-<button class="btn w-full bg-green-400 text-center" onclick="my_modal_5.showModal()">Next</button>
+<button class="btn w-full bg-green-400 text-center text-white" onclick="my_modal_5.showModal()">Next</button>
 <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
   <div class="modal-box flex flex-col justify-center items-center">
     <img src="./images/success.png" alt="">
