--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ url('./images/banner.png');">
         </div>
         <img src="./images/cupon-devider.png" alt="">
         <div class="right w-[45%] flex flex-col justify-center items-center">
-          <h1 class="text-3xl lg:text-4xl font-bold">NEW15</h1>
+          <h1 class="text-3xl lg:text-4xl font-bold" id="coupon1">NEW15</h1>
           <p class="text-gray-600">coupon code</p>
         </div>
       </div>
@@ -82,7 +82,7 @@ url('./images/banner.png');">
         </div>
         <img src="./images/cupon-devider.png" alt="">
         <div class="right w-[45%] flex flex-col justify-center items-center">
-          <h1 class="text-3xl lg:text-4xl font-bold">couple20</h1>
+          <h1 class="text-3xl lg:text-4xl font-bold" id="coupon2">couple20</h1>
           <p class="text-gray-600">coupon code</p>
         </div>
       </div>
@@ -211,15 +211,15 @@ url('./images/banner.png');">
       <hr class="border border-gray-400 border-dashed w-[98%] mx-auto my-2">
       <div class="flex justify-between my-2">
         <p class="font-bold">Total Price</p>
-        <p class="font-bold">BDT <span id="total-price"> 0</span></p>
+        <p class="font-bold">BDT <span id="total-price">0</span></p>
       </div>
-    <div class="flex w-full lg:w-96 rounded-lg bg-white">
-      <input class="w-full p-2 my-2 h-12  rounded-lg" type="text" placeholder="Have any coupon?">
-      <button class="btn bg-green-400 text-white mt-2 mx-4 outline-none">Apply</button>
+    <div class="flex w-full lg:w-96 roun ded-lg bg-white">
+      <input id="coupon-code" class="w-full p-2 my-2 h-12  rounded-lg" type="text" placeholder="Have any coupon?">
+      <button onclick="updateGrandTotalPrice('apply-btn')" id="apply-btn"   class="apply-btn btn bg-green-400 text-white mt-2 mx-4 outline-none" >Apply</button>
     </div>
     <div class="flex justify-between my-2">
       <p class="font-bold">Grand Total </p>
-      <p class="font-bold">BDT <span id="grand-total">1100</span></p>
+      <p class="font-bold">BDT <span id="grand-total">0</span></p>
     </div>
     <!-- Open the modal using ID.showModal() method -->
 <button class="btn w-full bg-green-400 text-center text-white" onclick="my_modal_5.showModal()">Next</button>
