--- a/index.html
+++ b/index.html
@@ -255,6 +255,6 @@ url('./images/banner.png');">
    <footer>
 
    </footer>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
